[tool.poetry]
name = "nirma"
version = "0.1.0"
description = ""
authors = ["dhilipsiva <dhilipsiva@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
spyne = "^2.14.0"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^8.2.0"
flake8 = "^4.0.1"
pep8 = "^1.7.1"
ipdb = "^0.13.9"
black = "^22.1.0"
isort = "^5.10.1"
pip = "^22.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
